feat: Improve test coverage for engagement service
- Add comprehensive unit tests for entity classes (Comment, Report, Review, Vote)
- Add unit tests for client classes (ContentServiceClient, GamificationServiceClient, UserServiceClient)
- Add unit tests for exception classes (ValidationException, ResourceNotFoundException, UnauthorizedException, ForbiddenException)
- Add comprehensive tests for GlobalExceptionHandler
- Achieve 100% coverage for exception package (exceeds 75% target)
- Total: 58 new tests added, all tests passing (633 total tests)

Coverage improvements:
- Entity package: 100% coverage
- Client package: 80% coverage
- Exception package: 100% coverage (target: 75%)
- Overall project: 84% instruction coverage